--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,20 @@ Package: collections
 Type: Package
 Title: High Performance Container Datatypes for R
 Version: 0.1.0
-Author: Who wrote it
+Authors@R: c(
+    person("Randy", "Lai", , "randy.cs.lai@gmail.com", role = c("aut", "cre"))
+    )
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+URL: https://randy3k.github.io/arrangements
+License: MIT + file LICENSE
+Depends:
+    R (>= 3.4.0)
+NeedsCompilation: yes
+ByteCompile: yes
+Imports: R6
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Roxygen: list(markdown = TRUE)
