--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,7 @@ Version: 0.1.0
 Authors@R: c(
     person("Randy", "Lai", , "randy.cs.lai@gmail.com", role = c("aut", "cre"))
     )
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Provides high performance container datatypes such as Queue, Stack, Deque, Dict and OrderedDict. Benchmarks <https://randy3k.github.io/collections/articles/benchmark.html> have shown that these containers are more computationally efficient than those offered by other packages.
 URL: https://randy3k.github.io/arrangements
 License: MIT + file LICENSE
 Depends:
