--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method("$",DequeLMeta)
 S3method("$",DequeMeta)
+S3method("$",OrderedDictLMeta)
+S3method("$",OrderedDictMeta)
 S3method("$",PriorityQueueMeta)
 S3method("$",QueueLMeta)
 S3method("$",QueueMeta)
@@ -9,6 +11,8 @@ S3method("$",StackLMeta)
 S3method("$",StackMeta)
 S3method(print,Deque)
 S3method(print,DequeL)
+S3method(print,OrderedDict)
+S3method(print,OrderedDictL)
 S3method(print,PriorityQueue)
 S3method(print,Queue)
 S3method(print,QueueL)
