--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method("$",DequeLMeta)
 S3method("$",DequeMeta)
+S3method("$",DictMeta)
 S3method("$",OrderedDictLMeta)
 S3method("$",OrderedDictMeta)
 S3method("$",PriorityQueueMeta)
@@ -11,6 +12,7 @@ S3method("$",StackLMeta)
 S3method("$",StackMeta)
 S3method(print,Deque)
 S3method(print,DequeL)
+S3method(print,Dict)
 S3method(print,OrderedDict)
 S3method(print,OrderedDictL)
 S3method(print,PriorityQueue)
