--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method("$",DequeLMeta)
 S3method("$",DequeMeta)
+S3method("$",DictLMeta)
 S3method("$",DictMeta)
 S3method("$",OrderedDictLMeta)
 S3method("$",OrderedDictMeta)
@@ -12,7 +13,6 @@ S3method("$",StackLMeta)
 S3method("$",StackMeta)
 S3method(print,Deque)
 S3method(print,DequeL)
-S3method(print,Dict)
 S3method(print,OrderedDict)
 S3method(print,OrderedDictL)
 S3method(print,PriorityQueue)
@@ -23,6 +23,7 @@ S3method(print,StackL)
 export(Deque)
 export(DequeL)
 export(Dict)
+export(DictL)
 export(OrderedDict)
 export(OrderedDictL)
 export(PriorityQueue)
@@ -31,4 +32,5 @@ export(QueueL)
 export(Stack)
 export(StackL)
 importFrom(R6,R6Class)
-useDynLib(collections)
+importFrom(xptr,null_xptr)
+useDynLib(collections, .registration = TRUE, .fixes = "C_")
