update docs and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,5 +22,6 @@ export(Queue)
 export(QueueL)
 export(Stack)
 export(StackL)
+importFrom(utils,hasName)
 importFrom(xptr,null_xptr)
 useDynLib(collections, .registration = TRUE, .fixes = "C_")
