--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,33 @@
-Package: collections
 Type: Package
+Package: collections
 Title: High Performance Container Data Types
 Version: 0.2.1
 Date: 2019-10-07
-Authors@R: c(
-    person("Randy", "Lai", , "randy.cs.lai@gmail.com", role = c("aut", "cre")),
-    person("Andrea", "Mazzoleni", role = "cph", comment = "tommy hash table library")
-    )
-Description: Provides high performance container data types such as Queue, Stack, Deque, Dict and OrderedDict. Benchmarks <https://randy3k.github.io/collections/articles/benchmark.html> have shown that these containers are asymptotically more efficient than those offered by other packages.
-URL: https://randy3k.github.io/collections
+Authors@R: 
+    c(person(given = "Randy",
+             family = "Lai",
+             role = c("aut", "cre"),
+             email = "randy.cs.lai@gmail.com"),
+      person(given = "Andrea",
+             family = "Mazzoleni",
+             role = "cph",
+             comment = "tommy hash table library"))
+Description: Provides high performance container data types such as Queue,
+    Stack, Deque, Dict and OrderedDict. Benchmarks
+    <https://randy3k.github.io/collections/articles/benchmark.html> have
+    shown that these containers are asymptotically more efficient than
+    those offered by other packages.
 License: MIT + file LICENSE
+URL: https://randy3k.github.io/collections
 Depends:
     R (>= 3.4.0)
 Imports:
     xptr
-NeedsCompilation: yes
+Suggests: 
+    testthat
 ByteCompile: yes
-Suggests: testthat
+Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+NeedsCompilation: yes
 Roxygen: list(markdown = TRUE)
+RoxygenNote: 6.1.1
