--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     container: rhub/ubuntu-rchk
     steps:
     - uses: actions/checkout@v1
-    - name: Install package
+    - name: Install dependencies
       run: |
         cd /opt/R-svn/
         . /opt/rchk/scripts/cmpconfig.inc
@@ -17,7 +17,7 @@ jobs:
         R --slave -e "remotes::install_local(repos = 'https://cloud.r-project.org', upgrade = 'never')"
       shell:
         bash
-    - name: Running rchk Tests
+    - name: Running Tests
       run: |
         cd /opt/R-svn/
         . /opt/rchk/scripts/cmpconfig.inc
@@ -39,7 +39,7 @@ jobs:
     container: rocker/r-devel-ubsan-clang
     steps:
     - uses: actions/checkout@v1
-    - name: Install package
+    - name: Install dependencies
       run: |
         R --slave -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org')"
         R --slave -e "remotes::install_deps(dependencies = TRUE)"
@@ -47,7 +47,9 @@ jobs:
         bash
     - name: Running Tests
       run: |
-        R --slave -e "rcmdcheck::rcmdcheck(args = c('--as-cran'))"
+        R --slave -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
+      env:
+        NOT_CRAN: true
       shell:
         bash
 
@@ -64,16 +66,15 @@ jobs:
       run: |
         apt-get update
         apt-get install git ssh curl bzip2 libffi6 libffi-dev -y
-    - name: Install package
+    - name: Install dependencies
       run: |
-        R --slave -e "install.packages('devtools', repos = 'https://cloud.r-project.org')"
-        R --slave -e "devtools::install(repos = 'https://cloud.r-project.org', upgrade = 'never')"
+        R --slave -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org')"
+        R --slave -e "remotes::install_deps(dependencies = TRUE)"
       shell:
         bash
     - name: Running Tests
       run: |
-        R --slave -e "pkgbuild::compile_dll()"
-        R --slave -e "devtools::check(args = c('--as-cran'))"
+        R --slave -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
       env:
         NOT_CRAN: true
       shell:
@@ -99,16 +100,15 @@ jobs:
         echo downloading "$URL"
         curl -L "$URL" -o ~/R.pkg
         sudo installer -pkg ~/R.pkg -target /
-    - name: Install package
+    - name: Install dependencies
       run: |
-        R --slave -e "install.packages('devtools', repos = 'https://cloud.r-project.org', type = 'mac.binary.el-capitan')"
-        R --slave -e "devtools::install(repos = 'https://cloud.r-project.org', upgrade = 'never', type = 'mac.binary.el-capitan')"
+        R --slave -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org', type = 'mac.binary.el-capitan')"
+        R --slave -e "remotes::install_deps(dependencies = TRUE, type = 'mac.binary.el-capitan')"
       shell:
         bash
     - name: Running Tests
       run: |
-        R --slave -e "pkgbuild::compile_dll()"
-        R --slave -e "devtools::check(args = c('--as-cran'))"
+        R --slave -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
       env:
         NOT_CRAN: true
       shell:
@@ -142,17 +142,15 @@ jobs:
         Start-Process -FilePath "C:\Rtools35.exe" -Wait -ArgumentList "/VERYSILENT"
       shell:
         pwsh
-    - name: Install package
+    - name: Install dependencies
       run: |
-        $env:TZ = "PST8PDT"
-        C:\R\bin\R --slave -e "install.packages('devtools', repos = 'https://cloud.r-project.org', type = 'win.binary')"
-        C:\R\bin\R --slave -e "devtools::install(repos = 'https://cloud.r-project.org', upgrade = 'never', type = 'win.binary')"
+        C:\R\bin\R --slave -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org', type = 'win.binary')"
+        C:\R\bin\R --slave -e "remotes::install_deps(dependencies = TRUE, type = 'win.binary')"
       shell:
         pwsh
     - name: Running Tests
       run: |
-        C:\R\bin\R --slave -e "pkgbuild::compile_dll()"
-        C:\R\bin\R --slave -e "devtools::check(args = c('--as-cran'))"
+        C:\R\bin\R --slave -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
       env:
         NOT_CRAN: true
       shell:
