--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,8 @@ jobs:
     - name: Running Tests
       run: |
         R --slave -e "rcmdcheck::rcmdcheck(args = c('--as-cran'))"
+      env:
+        NOT_CRAN: true
       shell:
         bash
 
@@ -66,14 +68,13 @@ jobs:
         apt-get install git ssh curl bzip2 libffi6 libffi-dev -y
     - name: Install package
       run: |
-        R --slave -e "install.packages('devtools', repos = 'https://cloud.r-project.org')"
-        R --slave -e "devtools::install(repos = 'https://cloud.r-project.org', upgrade = 'never')"
+        R --slave -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org')"
+        R --slave -e "remotes::install_deps(dependencies = TRUE)"
       shell:
         bash
     - name: Running Tests
       run: |
-        R --slave -e "pkgbuild::compile_dll()"
-        R --slave -e "devtools::check(args = c('--as-cran'))"
+        R --slave -e "rcmdcheck::rcmdcheck(args = c('--as-cran'))"
       env:
         NOT_CRAN: true
       shell:
@@ -101,14 +102,13 @@ jobs:
         sudo installer -pkg ~/R.pkg -target /
     - name: Install package
       run: |
-        R --slave -e "install.packages('devtools', repos = 'https://cloud.r-project.org', type = 'mac.binary.el-capitan')"
-        R --slave -e "devtools::install(repos = 'https://cloud.r-project.org', upgrade = 'never', type = 'mac.binary.el-capitan')"
+        R --slave -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org', type = 'mac.binary.el-capitan')"
+        R --slave -e "remotes::install_deps(dependencies = TRUE, type = 'mac.binary.el-capitan')"
       shell:
         bash
     - name: Running Tests
       run: |
-        R --slave -e "pkgbuild::compile_dll()"
-        R --slave -e "devtools::check(args = c('--as-cran'))"
+        R --slave -e "rcmdcheck::rcmdcheck(args = c('--as-cran'))"
       env:
         NOT_CRAN: true
       shell:
@@ -144,15 +144,13 @@ jobs:
         pwsh
     - name: Install package
       run: |
-        $env:TZ = "PST8PDT"
-        C:\R\bin\R --slave -e "install.packages('devtools', repos = 'https://cloud.r-project.org', type = 'win.binary')"
-        C:\R\bin\R --slave -e "devtools::install(repos = 'https://cloud.r-project.org', upgrade = 'never', type = 'win.binary')"
+        C:\R\bin\R --slave -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org', type = 'win.binary')"
+        C:\R\bin\R --slave -e "remotes::install_deps(dependencies = TRUE, type = 'win.binary')"
       shell:
         pwsh
     - name: Running Tests
       run: |
-        C:\R\bin\R --slave -e "pkgbuild::compile_dll()"
-        C:\R\bin\R --slave -e "devtools::check(args = c('--as-cran'))"
+        C:\R\bin\R --slave -e "rcmdcheck::rcmdcheck(args = c('--as-cran'))"
       env:
         NOT_CRAN: true
       shell:
