determine PACKAGE from GITHUB_REPOSITORY

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,15 +19,16 @@ jobs:
         bash
     - name: Running Tests
       run: |
+        PACKAGE=$(echo ${GITHUB_REPOSITORY#*/})
         cd /opt/R-svn/
         . /opt/rchk/scripts/cmpconfig.inc
-        /opt/rchk/scripts/check_package.sh collections
-        if [ $(cat packages/lib/collections/libs/collections.so.bcheck | wc -l) -gt 1 ]; then
-          cat packages/lib/collections/libs/collections.so.bcheck
+        /opt/rchk/scripts/check_package.sh $PACKAGE
+        if [ $(cat packages/lib/$PACKAGE/libs/$PACKAGE.so.bcheck | wc -l) -gt 1 ]; then
+          cat packages/lib/$PACKAGE/libs/$PACKAGE.so.bcheck
           FAIL=1
         fi
-        if [ $(cat packages/lib/collections/libs/collections.so.maacheck | wc -l) -gt 1 ]; then
-          cat packages/lib/collections/libs/collections.so.maacheck
+        if [ $(cat packages/lib/$PACKAGE/libs/$PACKAGE.so.maacheck | wc -l) -gt 1 ]; then
+          cat packages/lib/$PACKAGE/libs/$PACKAGE.so.maacheck
           FAIL=1
         fi
         [ -z "$FAIL" ] || exit 1
