--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: randy3k/github-action-rchk@master
+      env:
+        NOT_CRAN: true
 
   ubsan:
     runs-on: ubuntu-latest
