--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   rchk:
+    if: contains(github.event.head_commit.message, '[ci skip]') == false
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -12,6 +13,7 @@ jobs:
         NOT_CRAN: true
 
   ubsan:
+    if: contains(github.event.head_commit.message, '[ci skip]') == false
     runs-on: ubuntu-latest
     container: rocker/r-devel-ubsan-clang
     steps:
@@ -31,6 +33,7 @@ jobs:
         bash
 
   linux:
+    if: contains(github.event.head_commit.message, '[ci skip]') == false
     strategy:
       matrix:
         r: [latest]
@@ -60,6 +63,7 @@ jobs:
         bash
 
   macos:
+    if: contains(github.event.head_commit.message, '[ci skip]') == false
     strategy:
       matrix:
         r: [3.6]
@@ -91,6 +95,7 @@ jobs:
         bash
 
   windows:
+    if: contains(github.event.head_commit.message, '[ci skip]') == false
     strategy:
       matrix:
         r: [3.6]
