--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Description: Provides high performance container data types such
     shown that these containers are asymptotically more efficient than
     those offered by other packages.
 License: MIT + file LICENSE
-URL: https://randy3k.github.io/collections
+URL: URL: https://github.com/randy3k/retry
 Depends:
     R (>= 3.4.0)
 Imports:
