move to small cased functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,13 @@
 export(Deque)
 export(Dict)
 export(OrderedDict)
-export(PriorityQueue)
+export(PriorityDict)
 export(Queue)
 export(Stack)
+export(deque)
+export(dict)
+export(ordered_dict)
+export(priority_queue)
+export(queue)
+export(stack)
 useDynLib(collections, .registration = TRUE, .fixes = "C_")
