--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Authors@R:
              role = "cph",
              comment = "tommy hash table library"))
 Description: Provides high performance container data types such
-    as Queue, Stack, deque, dict and Ordereddict. Benchmarks
+    as queues, stacks, deques, dicts and ordered dicts. Benchmarks
     <https://randy3k.github.io/collections/articles/benchmark.html> have
     shown that these containers are asymptotically more efficient than
     those offered by other packages.
