--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Dict)
 export(OrderedDict)
 export(PriorityQueue)
 export(Queue)
+export(R6Classes)
 export(Stack)
 export(deque)
 export(dict)
