switch to fastdigest

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,4 +31,4 @@ NeedsCompilation: yes
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Imports: 
-    digest (>= 0.6.25)
+    fastdigest (>= 0.6.3)
