--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
       _R_CHECK_CRAN_INCOMING_: false
     steps:
       - uses: actions/checkout@v1
-      # - uses: r-lib/actions/run-rchk@master
-      - uses: randy3k/actions/run-rchk@rchk
+      - uses: r-lib/actions/run-rchk@master
+      # - uses: randy3k/actions/run-rchk@rchk
 
   ubsan:
     if: contains(github.event.head_commit.message, '[ci skip]') == false
