change mac binary type

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,8 +73,8 @@ jobs:
           r-version: ${{ matrix.r }}
       - name: Install dependencies
         run: |
-          Rscript -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org', type = 'mac.binary.el-capitan')"
-          Rscript -e "remotes::install_deps(dependencies = TRUE, type = 'mac.binary.el-capitan')"
+          Rscript -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org', type = 'mac.binary')"
+          Rscript -e "remotes::install_deps(dependencies = TRUE, type = 'mac.binary')"
       - name: Running Tests
         run: |
           Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
