--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,14 @@ name: Main
 on: [push, pull_request]
 
 jobs:
+  cleanup:
+    name: Cancel Previous Runs
+    runs-on: ubuntu-latest
+    steps:
+      - uses: styfle/cancel-workflow-action@0.9.0
+        with:
+          access_token: ${{ github.token }}
+
   rchk:
     if: contains(github.event.head_commit.message, '[ci skip]') == false
     runs-on: ubuntu-latest
@@ -29,16 +37,12 @@ jobs:
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Running Tests
         run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
+          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'error')"
 
   linux:
     if: contains(github.event.head_commit.message, '[ci skip]') == false
-    strategy:
-      matrix:
-        r: [latest]
-        # r: [3.5, latest, devel]
     runs-on: ubuntu-latest
-    container: rocker/tidyverse:${{ matrix.r }}
+    container: rocker/tidyverse:latest
     env:
       NOT_CRAN: true
       _R_CHECK_CRAN_INCOMING_: false
@@ -50,7 +54,7 @@ jobs:
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Running Tests
         run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
+          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'error')"
       - name: Codecov
         run: Rscript -e "covr::codecov()"
         env:
@@ -58,10 +62,6 @@ jobs:
 
   macos:
     if: contains(github.event.head_commit.message, '[ci skip]') == false
-    strategy:
-      matrix:
-        r: [3.6]
-        # r: [3.5, 3.6, devel]
     runs-on: macOS-latest
     env:
       NOT_CRAN: true
@@ -70,14 +70,14 @@ jobs:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/setup-r@v1
         with:
-          r-version: ${{ matrix.r }}
+          r-version: latest
       - name: Install dependencies
         run: |
           Rscript -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org')"
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Running Tests
         run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
+          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'error')"
       - name: Codecov
         run: Rscript -e "covr::codecov()"
         env:
@@ -85,10 +85,6 @@ jobs:
 
   windows:
     if: contains(github.event.head_commit.message, '[ci skip]') == false
-    strategy:
-      matrix:
-        r: [3.6]
-        # r: [3.5, 3.6, devel]
     runs-on: windows-latest
     env:
       NOT_CRAN: true
@@ -97,14 +93,14 @@ jobs:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/setup-r@v1
         with:
-          r-version: ${{ matrix.r }}
+          r-version: latest
       - name: Install dependencies
         run: |
           Rscript -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org')"
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Running Tests
         run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
+          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'error')"
       - name: Codecov
         run: Rscript -e "covr::codecov()"
         env:
