--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Running Tests
         run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'error')"
+          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
 
   linux:
     if: contains(github.event.head_commit.message, '[ci skip]') == false
@@ -54,7 +54,7 @@ jobs:
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Running Tests
         run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'error')"
+          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
       - name: Codecov
         run: Rscript -e "covr::codecov()"
         env:
@@ -77,7 +77,7 @@ jobs:
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Running Tests
         run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'error')"
+          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
       - name: Codecov
         run: Rscript -e "covr::codecov()"
         env:
@@ -100,7 +100,7 @@ jobs:
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Running Tests
         run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'error')"
+          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual', '--timings'), error_on = 'warning')"
       - name: Codecov
         run: Rscript -e "covr::codecov()"
         env:
