--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,18 @@ jobs:
       _R_CHECK_CRAN_INCOMING_: false
     steps:
       - uses: actions/checkout@v1
+      - name: Query dependencies
+        run: |
+          install.packages('remotes')
+          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
+          writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
+        shell: RDscript {0}
+      - name: Restore R package cache
+        uses: actions/cache@v2
+        with:
+          path: /usr/local/lib/R/site-library
+          key: ubsan-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ubsan-${{ hashFiles('.github/R-version') }}-1-
       - name: Install dependencies
         run: |
           Rscript -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org')"
@@ -39,30 +51,13 @@ jobs:
         run: |
           Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual'), error_on = 'warning')"
 
-  linux:
+  rcmdcheck:
     if: contains(github.event.head_commit.message, '[ci skip]') == false
-    runs-on: ubuntu-latest
-    container: rocker/tidyverse:latest
-    env:
-      NOT_CRAN: true
-      _R_CHECK_CRAN_INCOMING_: false
-    steps:
-      - uses: actions/checkout@v1
-      - name: Install dependencies
-        run: |
-          Rscript -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org')"
-          Rscript -e "remotes::install_deps(dependencies = TRUE)"
-      - name: Running Tests
-        run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual'), error_on = 'warning')"
-      - name: Codecov
-        run: Rscript -e "covr::codecov()"
-        env:
-          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
-
-  macos:
-    if: contains(github.event.head_commit.message, '[ci skip]') == false
-    runs-on: macOS-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     env:
       NOT_CRAN: true
       _R_CHECK_CRAN_INCOMING_: false
@@ -71,33 +66,22 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
         with:
           r-version: latest
-      - name: Install dependencies
+      - name: Query dependencies
         run: |
-          Rscript -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org')"
-          Rscript -e "remotes::install_deps(dependencies = TRUE)"
-      - name: Running Tests
-        run: |
-          Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual'), error_on = 'warning')"
-      - name: Codecov
-        run: Rscript -e "covr::codecov()"
-        env:
-          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
-
-  windows:
-    if: contains(github.event.head_commit.message, '[ci skip]') == false
-    runs-on: windows-latest
-    env:
-      NOT_CRAN: true
-      _R_CHECK_CRAN_INCOMING_: false
-    steps:
-      - uses: actions/checkout@v1
-      - uses: r-lib/actions/setup-r@v1
+          install.packages('remotes')
+          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
+          writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
+        shell: Rscript {0}
+      - name: Restore R package cache
+        uses: actions/cache@v2
         with:
-          r-version: latest
+          path: ${{ env.R_LIBS_USER }}
+          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
       - name: Install dependencies
         run: |
-          Rscript -e "install.packages(c('remotes', 'rcmdcheck'), repos = 'https://cloud.r-project.org')"
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
+          Rscript -e "remotes::install_cran('rcmdcheck')"
       - name: Running Tests
         run: |
           Rscript -e "rcmdcheck::rcmdcheck(args = c('--as-cran', '--no-manual'), error_on = 'warning')"
