install system dependencies

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,6 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/run-rchk@master
-      # - uses: randy3k/actions/run-rchk@rchk
 
   ubsan:
     if: contains(github.event.head_commit.message, '[ci skip]') == false
@@ -78,6 +77,13 @@ jobs:
           path: ${{ env.R_LIBS_USER }}
           key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
+      - name: Install system dependencies
+        if: runner.os == 'Linux'
+        run: |
+          while read -r cmd
+          do
+            eval sudo $cmd
+          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
       - name: Install dependencies
         run: |
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
